scribble-test/src/test/resources/bad/liveness/roleprog/Test03b.scr
module bad.liveness.roleprog.Test03b;


global protocol Proto1(role A, role B, role C)
{
	choice at A
	{
		rec X
		{
			choice at A
			{
				1() from A to B;
				continue X;
			}
			or
			{
				() from A to B;  // Also wait-for error at C -- tests projected choice case pruning (for C)
			}
		}
	}
	or
	{
		2() from A to B;
		2() from B to C;  // Role progress violation for C
	}
}
